# psp-stuff

./: LICENSE  README.md
hello_world/: CMakeLists.txt  Makefile  main.c
hello_world_cxx/: Makefile  main.cpp
sdl_example/: Makefile  main.c
show_foot/: Makefile  Makefile_pc  board.c  board.h  engine.c  engine.h  game.c  game.h  generator.c  generator.h  kill.sh  main.c  move.c  move.h  run.sh  search.c  search.h  transfer.sh
show_foot/data/: field.psd  icon0.psd
